--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
 
-    <title>Anna Leushchenko</title>
+    <title>John Aramburu</title>
 
-    <meta name="title" content="Anna Leushchenko">
+    <meta name="title" content="John Aramburu">
     <meta name="description" content="Portfolio website created with Flutter">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Anna Leushchenko">
+    <meta property="og:title" content="John Aramburu">
     <meta property="og:description" content="Portfolio website created with Flutter">
     <meta property="og:image"
           content="https://raw.githubusercontent.com/foxanna/foxanna.github.io/master/assets/assets/images/my_photo.png">
@@ -26,8 +26,8 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Anna Leushchenko">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <meta name="apple-mobile-web-app-title" content="John Aramburu">
+    <link rel="apple-touch-icon" href="icons/193.png">
 
     <link rel="icon" type="image/png" href="favicon.png"/>
 
