--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image"
           content="https://raw.githubusercontent.com/foxanna/foxanna.github.io/master/assets/assets/images/my_photo.png">
 
-    <meta property="twitter:title" content="Anna Leushchenko">
+    <meta property="twitter:title" content="John Aramburu">
     <meta property="twitter:description" content="Portfolio website created with Flutter">
     <meta property="twitter:image"
           content="https://raw.githubusercontent.com/foxanna/foxanna.github.io/master/assets/assets/images/my_photo.png">
