--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta property="og:title" content="John Aramburu">
     <meta property="og:description" content="Portfolio website created with Flutter">
     <meta property="og:image"
-          content="https://raw.githubusercontent.com/foxanna/foxanna.github.io/master/assets/assets/images/my_photo.png">
+          content="https://raw.githubusercontent.com/johnmaikol/aramburujohn/refs/heads/main/assets/assets/images/my_photo.png">
 
     <meta property="twitter:title" content="John Aramburu">
     <meta property="twitter:description" content="Portfolio website created with Flutter">
     <meta property="twitter:image"
-          content="https://raw.githubusercontent.com/foxanna/foxanna.github.io/master/assets/assets/images/my_photo.png">
+          content="https://raw.githubusercontent.com/johnmaikol/aramburujohn/refs/heads/main/assets/assets/images/my_photo.png">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
