--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="John Aramburu">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="icons/193.png">
 
     <link rel="icon" type="image/png" href="favicon.png"/>
